--- a/_config.yml
+++ b/_config.yml
@@ -9,26 +9,25 @@ author: thelumberjhack
 
 avatar: "/assets/images/site/logo.png"
 
-# TODO: personalize colors
-# navbar-col: "#F5F5F5"
-# navbar-text-col: "#404040"
-# navbar-border-col: "#EAEAEA"
-# page-col: "#FFFFFF"
-# link-col: "#008AFF"
-# hover-col: "#0085A1"
-# footer-col: "#F5F5F5"
-# footer-text-col: "#777777"
-# footer-link-col: "#404040"
-
 navbar-links:
   About me: "about"
 
 social-network-links:
-  twitter: thelumberjhack
   github:  thelumberjhack
   linkedin: yannickformaggio
   email: thelumberjhack@[del-me]pm.me
+  mastodon: infosec.exchange/@thelumberjhack
   rss: true
+
+rss-description: Trials and tribulations of thelumberjhack in the infosec world
+
+url-pretty: the.lumberjhack.com
+
+excerpt_length: 50
+feed_show_excerpt: true
+feed_show_tags: true
+post_search: true
+keywords: "reverse engineering,linux,android,aarch64,infosec,fuzzing,assembly"
 
 link-tags: true
 title-separator: " | "
@@ -38,7 +37,7 @@ markdown: kramdown
 highlighter: rouge
 kramdown:
   input: GFM
-remote_theme: daattali/beautiful-jekyll@4.0.1
+remote_theme: daattali/beautiful-jekyll@6.0.1
 permalink: /:year-:month-:day-:title/
 paginate: 5
 plugins:
