fix: correct url-pretty entry in configuration

--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ social-network-links:
 
 rss-description: Trials and tribulations of thelumberjhack in the infosec world
 
-url-pretty: the.lumberjhack.com
+url-pretty: thelumberjhack.com
 
 excerpt_length: 50
 feed_show_excerpt: true
